[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menus/Pause/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/Pause/Textures/MainMenu.PNG" type="Texture" id=2]
[ext_resource path="res://Menus/Pause/Textures/Resume.PNG" type="Texture" id=3]
[ext_resource path="res://Menus/Pause/Textures/Settings.PNG" type="Texture" id=4]
[ext_resource path="res://Menus/ButtonTheme.tres" type="Theme" id=5]
[ext_resource path="res://Menus/SettingsMenu.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.360784, 0.372549, 0.592157, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.5
margin_top = -223.0
margin_right = 191.5
margin_bottom = 223.0
theme = ExtResource( 5 )

[node name="Label_Paused" type="Label" parent="VBoxContainer"]
margin_right = 383.0
margin_bottom = 14.0
text = "PAUSED"
align = 1

[node name="HSeparator_50px" type="HSeparator" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 383.0
margin_bottom = 68.0
custom_constants/separation = 50
custom_styles/separator = SubResource( 1 )

[node name="Button_Menu" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 383.0
margin_bottom = 172.0
icon = ExtResource( 2 )

[node name="HSeparator_20px_1" type="HSeparator" parent="VBoxContainer"]
margin_top = 176.0
margin_right = 383.0
margin_bottom = 196.0
custom_constants/separation = 20
custom_styles/separator = SubResource( 1 )

[node name="Button_Settings" type="Button" parent="VBoxContainer"]
margin_top = 200.0
margin_right = 383.0
margin_bottom = 300.0
icon = ExtResource( 4 )

[node name="HSeparator_20px_2" type="HSeparator" parent="VBoxContainer"]
margin_top = 304.0
margin_right = 383.0
margin_bottom = 324.0
custom_constants/separation = 20
custom_styles/separator = SubResource( 1 )

[node name="Button_Resume" type="Button" parent="VBoxContainer"]
margin_top = 328.0
margin_right = 383.0
margin_bottom = 428.0
icon = ExtResource( 3 )

[node name="SettingsMenu" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="VBoxContainer/Button_Menu" to="." method="_on_Button_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Settings" to="." method="_on_Button_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Resume" to="." method="_on_Button_Resume_pressed"]
